<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0E0E0"
    android:clipToPadding="true"
    android:fitsSystemWindows="true">

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/rel_head" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_head"
        android:background="#000">

        <TextView
            android:id="@+id/txt_check_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#fff"
            android:textSize="15sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel_five"
        android:layout_width="fill_parent"
        android:layout_height="220dp"
        android:layout_below="@+id/rel_head"
        android:layout_marginTop="25dp"
        android:background="#00000000"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="-15dp"
            android:layout_toLeftOf="@+id/rel_mid"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_progressBar1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="#FF2D2D"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/xin"
                        android:textColor="#000" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_progressBar2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="#FF2D2D"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/ya"
                        android:textColor="#000" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="-15dp"
            android:layout_toLeftOf="@+id/rel_mid"
            android:orientation="vertical">

            <com.jlm.app.jianlemei_demo.activity.home.examcenter.RoundProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center" />

            <com.jlm.app.jianlemei_demo.activity.home.examcenter.RoundProgressBar
                android:id="@+id/progressBar2"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rel_mid"
            android:layout_width="110dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:background="#00000000">

            <com.jlm.app.jianlemei_demo.activity.home.examcenter.RoundProgressBar
                android:id="@+id/progressBar3"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_centerInParent="true"
                android:gravity="center" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="110dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:background="#00000000">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_progressBar3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="0.00"
                    android:textColor="#FF2D2D"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/nian"
                    android:textColor="#000" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:layout_toRightOf="@+id/rel_mid"
            android:orientation="vertical">

            <com.jlm.app.jianlemei_demo.activity.home.examcenter.RoundProgressBar
                android:id="@+id/progressBar4"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center" />

            <com.jlm.app.jianlemei_demo.activity.home.examcenter.RoundProgressBar
                android:id="@+id/progressBar5"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-15dp"
            android:layout_toRightOf="@+id/rel_mid"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_progressBar4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="#FF2D2D"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="血氧"
                        android:textColor="#000" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_progressBar5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="000"
                        android:textColor="#FF2D2D"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:text="@string/di"
                        android:textColor="#000" />
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"></RelativeLayout>

    <com.jlm.app.jianlemei_demo.widget.TitleBar
        android:id="@+id/rel_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titlename="键乐美体检中心"></com.jlm.app.jianlemei_demo.widget.TitleBar>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lin_check_bottom"
        android:layout_below="@+id/rel_five"
        android:layout_marginTop="5dp"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/lin_check_bottom"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""></TextView>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""></TextView>
    </LinearLayout>

</RelativeLayout>